# hyfuzz-server-windows

./: BUILD_GUIDE.md  INSTALLATION.md  MANIFEST.in  README.md  SETUP_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
config/: llm_config.yaml  logging_config.yaml
config/example_configs/: config_dev.yaml  config_prod.yaml  config_test.yaml
scripts/: benchmark.py  health_check.py  setup_env.py  setup_ollama.py  start_server.py  test_mcp.py
scripts/data/: cve_data.json  cwe_data.json
scripts/test_benchmarks/: test_results.json
src/: __init__.py  __main__.py
src/api/: __init__.py  handlers.py  middleware.py  routes.py  validators.py
src/config/: __init__.py  config_loader.py  default_config.yaml  logging_config.yaml  settings.py
src/knowledge/: __init__.py  cve_repository.py  cwe_repository.py  graph_cache.py  knowledge_loader.py  utils.py  vulnerability_db.py
src/llm/: __init__.py  cache_manager.py  cot_engine.py  embedding_manager.py  llm_client.py  llm_service.py  prompt_builder.py  response_parser.py  token_counter.py  utils.py
src/mcp_server/: __init__.py  capability_manager.py  http_transport.py  message_handler.py  server.py  session_manager.py  stdio_transport.py  utils.py  websocket_transport.py
src/models/: __init__.py  common_models.py  config_models.py  knowledge_models.py  llm_models.py  message_models.py
src/utils/: __init__.py  async_utils.py  decorators.py  exceptions.py  helpers.py
tests/fixtures/: __init__.py  fixtures_loader.py  mock_data.py  mock_llm.py  mock_models.py
tests/integration/: __init__.py  test_end_to_end.py  test_knowledge_integration.py  test_llm_pipeline.py  test_mcp_protocol.py  test_server_client.py
