# ==============================================================================
# HyFuzz Server - Setup Configuration File
# ==============================================================================
# Alternative configuration method (legacy, but still supported)
# Most configuration is now in pyproject.toml and setup.py
# ==============================================================================

[metadata]
name = hyfuzz-server
version = attr: src.__version__
author = HyFuzz Contributors
author_email = support@hyfuzz.ai
description = HyFuzz Server - Hybrid AI-Enhanced Vulnerability Detection Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/your-org/hyfuzz-server-windows
project_urls =
    Bug Tracker = https://github.com/your-org/hyfuzz-server-windows/issues
    Documentation = https://github.com/your-org/hyfuzz-server-windows/docs
    Source Code = https://github.com/your-org/hyfuzz-server-windows
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: Microsoft :: Windows
    Topic :: Security
    Intended Audience :: Developers

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9,<4.0
include_package_data = True

[options.packages.find]
where = src
include = hyfuzz_server*
exclude =
    tests*
    *.tests

[options.entry_points]
console_scripts =
    hyfuzz-server = src.mcp_server.server:main
    hyfuzz-server-start = scripts.start_server:main
    hyfuzz-health = scripts.health_check:main
    hyfuzz-setup = scripts.setup_env:main
    hyfuzz-test = scripts.test_mcp:main

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .tox,
    .venv
ignore = E203, W503

# ==============================================================================
# END OF SETUP.CFG
# ==============================================================================